--- a/index.html
+++ b/index.html
@@ -8,5 +8,21 @@
   </head>
   <body>
     <!-- Your code here -->
+
+  <img 
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+    "
+  />
+  <img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+    "
+    alt="A lion yawning"
+  />
+  <img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+    "
+    alt="A lion yawning"
+    title="Oh Meow"
+  />
   </body>
 </html>
